--- a/app/src/main/res/layout/movie_details.xml
+++ b/app/src/main/res/layout/movie_details.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/fragment_main2">
+    tools:showIn="@layout/fragment_details">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +28,7 @@
                     android:layout_height="200dp"
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
 
                 <!--android:layout_gravity="center"-->
 
@@ -42,7 +41,8 @@
                     <TextView
                         android:id="@+id/user_rating"
                         style="@style/TextViewStyle"
-                        android:gravity="center"/>
+                        android:gravity="center"
+                        android:text="User Rating" />
 
                     <RatingBar
                         android:id="@+id/rating_bar"
@@ -54,15 +54,14 @@
                         android:max="5"
                         android:numStars="5"
                         android:stepSize="0.01"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/release_date"
                         style="@style/TextViewStyle"
-                        android:gravity="center"/>
-
+                        android:gravity="center"
+                        android:text="Release Date" />
                 </LinearLayout>
-
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
@@ -72,8 +71,94 @@
 
             <TextView
                 android:id="@+id/overview"
-                style="@style/TextViewStyle"/>
+                style="@style/TextViewStyle"
+                android:text="Overview" />
         </android.support.v7.widget.CardView>
-        <!--android:fontFamily="Roboto-Thin"-->
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/video_card_view"
+            style="@style/CardViewStyle"
+            android:layout_margin="7dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginLeft="2dp"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/youtube_icon" />
+
+                    <TextView
+                        style="@style/TextViewStyle"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="2dp"
+                        android:text="Videos" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/ic_right_scroll" />
+                </LinearLayout>
+
+                <it.sephiroth.android.library.widget.HListView
+                    android:id="@+id/videos_list_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:divider="@color/colorPrimaryDark"
+                    android:padding="@dimen/activity_horizontal_margin"
+                    app:hlv_dividerWidth="10dp" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/review_card_view"
+            style="@style/CardViewStyle"
+            android:layout_margin="7dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        style="@style/TextViewStyle"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="2dp"
+                        android:gravity="center"
+                        android:text="Reviews" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/ic_right_scroll" />
+                </LinearLayout>
+
+                <it.sephiroth.android.library.widget.HListView
+                    android:id="@+id/reviews_list_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:divider="@color/colorPrimaryDark"
+                    android:padding="16dp"
+                    app:hlv_dividerWidth="1dp" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
