--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,10 +3,12 @@
     <string-array name="pref_units_options">
         <item>@string/popularity</item>
         <item>@string/rating</item>
+        <item>@string/favorite</item>
     </string-array>
 
     <string-array name="pref_units_values">
         <item>@string/popularity</item>
         <item>@string/rating</item>
+        <item>@string/favorite</item>
     </string-array>
 </resources>
