--- a/app/src/main/res/layout/movie_details.xml
+++ b/app/src/main/res/layout/movie_details.xml
@@ -28,7 +28,8 @@
                     android:layout_height="200dp"
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:contentDescription="Thumbnail Image" />
 
                 <!--android:layout_gravity="center"-->
 
@@ -93,22 +94,26 @@
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:layout_marginLeft="2dp"
                         android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="2dp"
+                        android:layout_marginStart="2dp"
+                        android:contentDescription="Youtube Icon"
                         android:src="@drawable/youtube_icon" />
 
                     <TextView
                         style="@style/TextViewStyle"
                         android:layout_gravity="center_vertical"
                         android:layout_margin="2dp"
+                        android:drawableRight="@drawable/ic_right_scroll"
                         android:text="Videos" />
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:src="@drawable/ic_right_scroll" />
                 </LinearLayout>
+                <!--<ImageView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_vertical"-->
+                <!--android:contentDescription="Right Scroll"-->
+                <!--android:src="@drawable/ic_right_scroll" />-->
+
 
                 <it.sephiroth.android.library.widget.HListView
                     android:id="@+id/videos_list_view"
@@ -131,23 +136,25 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                <!--<LinearLayout-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content">-->
 
-                    <TextView
-                        style="@style/TextViewStyle"
-                        android:layout_gravity="center_vertical"
-                        android:layout_margin="2dp"
-                        android:gravity="center"
-                        android:text="Reviews" />
+                <TextView
+                    style="@style/TextViewStyle"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="2dp"
+                    android:drawableRight="@drawable/ic_right_scroll"
+                    android:gravity="center"
+                    android:text="Reviews" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:src="@drawable/ic_right_scroll" />
-                </LinearLayout>
+                <!--<ImageView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_vertical"-->
+                <!--android:contentDescription="Right Scroll"-->
+                <!--android:src="@drawable/ic_right_scroll" />-->
+                <!--</LinearLayout>-->
 
                 <it.sephiroth.android.library.widget.HListView
                     android:id="@+id/reviews_list_view"
