--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -2,15 +2,14 @@
 
 <!--This view represents how a single item of Grid view will look like-->
 
-<android.support.v7.widget.CardView
-    style="@style/CardViewStyle">
+<android.support.v7.widget.CardView style="@style/CardViewStyle">
 
-    <ImageView
+    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/posterImg"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        android:layout_margin="5dp"/>
+        android:layout_margin="5dp"
+        android:contentDescription="Thumbnail Image" />
 
 </android.support.v7.widget.CardView>
